# dilithium-py

./: .gitignore  README.md  aes256_ctr_drbg.py  benchmark_dilithium.py  dilithium.py  minimal_example.py  modules.py  ntt_helper.py  polynomials.py  pyproject.toml  requirements.txt  setup.py  shake_wrapper.py  test_dilithium.py  utils.py
.github/workflows/: ci.yml  release-pypi.yml
assets/: PQCsignKAT_2544.rsp  PQCsignKAT_4016.rsp  PQCsignKAT_4880.rsp  kat_MLDSA_44_det.rsp  kat_MLDSA_44_hedged.rsp  kat_MLDSA_65_det.rsp  kat_MLDSA_65_hedged.rsp  kat_MLDSA_87_det.rsp  kat_MLDSA_87_hedged.rsp
benchmarks/: benchmark_bit_packing.py  benchmark_dilithium.py  benchmark_ml_dsa.py
dilithium/: __init__.py  default_parameters.py  dilithium.py
drbg/: aes256_ctr_drbg.py
modules/: modules.py  modules_generic.py
polynomials/: polynomials.py  polynomials_generic.py
shake/: shake_wrapper.py
src/dilithium_py/dilithium/: __init__.py  default_parameters.py  dilithium.py
src/dilithium_py/drbg/: aes256_ctr_drbg.py
src/dilithium_py/ml_dsa/: __init__.py  default_parameters.py  hash_ml_dsa.py  ml_dsa.py  pkcs.py
src/dilithium_py/modules/: modules.py  modules_generic.py
src/dilithium_py/polynomials/: polynomials.py  polynomials_generic.py
src/dilithium_py/shake/: shake_wrapper.py
src/dilithium_py/utilities/: utils.py
tests/: test_dilithium.py  test_drbg.py  test_hash_ml_dsa.py  test_ml_dsa.py  test_module_generic.py  test_pkcs.py  test_polynomial_generic.py  test_shake.py  test_utils.py
utilities/: utils.py
